objects/CSS_Fault_Code_Master__c.object
<CustomObject>
    <description>To store the fault code, description and Service Model Name</description>
    <fields>
        <fullName>Circuit_Description__c</fullName>
        <label>Circuit Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Comp_Location__c</fullName>
        <label>Comp Location</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Effect__c</fullName>
        <label>Effect</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Engine__c</fullName>
        <label>Engine</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FMI__c</fullName>
        <label>FMI</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fault_Code_Description__c</fullName>
        <description>This field  stores the description for Fault Code based on INSITE.</description>
        <inlineHelpText>Description of your fault code.</inlineHelpText>
        <label>Fault Code Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>File_Name__c</fullName>
        <label>File Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lamp__c</fullName>
        <label>Lamp</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reason__c</fullName>
        <label>Reason</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SPN__c</fullName>
        <label>SPN</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Service_Model_Name__c</fullName>
        <description>This field is used to store the name of your Service Model.</description>
        <inlineHelpText>This Field is user input from from fault code screen.</inlineHelpText>
        <label>Service Model Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>CSS Fault Code Master</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Fault_Code_Description__c</columns>
        <columns>Service_Model_Name__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Fault Code</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CSS Fault Code Master</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>